update of sample front-end

--- a/client/sampleReachHigh/index.html
+++ b/client/sampleReachHigh/index.html
@@ -12,7 +12,7 @@
 <!-- Main grid -->
 <div id="main">
 
-    <div id="userInput">
+    <div id="userInput"> 
         <!-- User input grid/ link input-->
         <input id="textbox" type="text" placeholder=" Link Text......"> <button> GET </button>
     </div>
@@ -31,7 +31,7 @@
     </div>
 
     <div id="UserReview">
-        <div id="review">
+        <div id="review"> <!-- layout testing 1 -->
             <p id="reviewText">Does exactly what you'd expect, and I mean that in a good way. It gives you only the most
                 important
                 features, and uses simpler layouts and functionality. In exchange, the app loads insanely fast, and
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div id="review">
+        <div id="review">  <!-- layout testing 2 -->
             <p id="reviewText">Does exactly what you'd expect, and I mean that in a good way. It gives you only the most
                 important
                 features, and uses simpler layouts and functionality. In exchange, the app loads insanely fast, and
@@ -58,17 +58,17 @@
                 <span class="fa fa-star"></span>
             </div>
         </div>
-        <div id="review">
+        <div id="review">  <!-- layout testing 3 -->
             <p id="reviewText">Does exactly what you'd expect, and I mean that in a good way. It gives you only the most
                 important
                 features, and uses simpler layouts and functionality. In exchange, the app loads insanely fast, and
                 barely even touches your battery in the process. Perfect for those who wants to keep track of their</p>
             <div id="star">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
+                <span class="fa fa-star checked"></span>     <!-- rating star checked -->
+                <span class="fa fa-star checked"></span>	 <!-- rating star checked -->
+                <span class="fa fa-star checked"></span>	 <!-- rating star checked -->
+                <span class="fa fa-star"></span>			 <!-- rating star unchecked -->
+                <span class="fa fa-star"></span>			 <!-- rating star unchecked -->
             </div>
         </div>
 
