Home Page updated

--- a/client/Version 2/public/index.html
+++ b/client/Version 2/public/index.html
@@ -37,7 +37,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="header">ReachHigh</div>
+    <div id="header">ReachHigh
+      <div class="btn-group">
+        <button class="button">Blog</button>
+        <button class="button">About Us</button>
+        <button class="button">Home</button>
+      </div>
+    </div>
     <div id="root"></div>
     <div id="footer">
       <div class="grid-item">about us</div>
