--- a/client/Version 2/public/index.html
+++ b/client/Version 2/public/index.html
@@ -39,7 +39,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="header">ReachHigh
       <div class="btn-group">
-        <button class="button">Blog</button>
+        <a href='aboutUs.html'><button class="button">Blog</button></a>
         <button class="button">About Us</button>
         <button class="button">Home</button>
       </div>
